welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: error: too many arguments for method rassemblage: ()Array[java.awt.Color]
			setCouleurBrosse(rassemblage(1));
                                                    ^